<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">Cometd Chat</string>
<string name="main_title">Cometd Chat</string>
<string name="pref_receive_private_message">Receive private message</string>
<string name="pref_receive_private_message_key">pref_receive_private_message_key</string>
<string name="pref_host_title">Edit host</string>
<string name="pref_host">Host</string>
<string name="pref_host_default">10.0.2.2</string>
<string name="pref_host_key">pref_host_key</string>
<string name="pref_port_title">Edit port</string>
<string name="pref_port">Port</string>
<string name="pref_port_default">8080</string>
<string name="pref_port_key">pref_port_key</string>
<string name="pref_cometd_uri_title">Edit Cometd URI</string>
<string name="pref_cometd_uri">Cometd URI</string>
<string name="pref_cometd_uri_default">/cometd/cometd</string>
<string name="pref_cometd_uri_key">pref_cometd_uri_key</string>

<string name="pref_username_title">Edit username</string>
<string name="pref_username">Username</string>
<string name="pref_username_key">pref_username_key</string>

<string name="edit_preferences">Edit connection settings</string>
<string name="chat_room">Chat Room</string>
<string name="cancel">cancel</string>
<string name="message">Message</string>
<string name="public_message">Public message</string>
<string name="private_message">Private message</string>
<string name="private_chat">Private chat</string>
<string name="create_message">Create message</string>
<string name="create_public_message">Create public message</string>
<string name="send_to_room">Send to room</string>
<string name="send_to_all">Send to all</string>
<string name="send_to_user">Send to user</string>
<string name="send_message">Send message</string>
<string name="send">send</string>
<string name="dialog_cancel">cancel</string>
<string name="users">Users</string>
<string name="view_users">View users</string>
<string name="ok">ok</string>
<string name="online_users">Online users</string>
<string name="username">Username</string>
<string name="disconnect">disconnect</string>

</resources>
